--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node index.ts > stdout.txt 2> stderr.txt &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MinhPhan",
